RESOLVED FIXED52845
REGRESSION (r75138-r75503): Animations on Apple HTML5 Gallery demo are wrong
https://bugs.webkit.org/show_bug.cgi?id=52845
Summary REGRESSION (r75138-r75503): Animations on Apple HTML5 Gallery demo are wrong
Adam Roben (:aroben)
Reported 2011-01-20 14:11:34 PST
To reproduce: 1. Go to http://www.apple.com/html5/showcase/gallery/ 2. Click on "Grid" 3. Hover over some images The images are supposed to animate to be slightly larger. Instead they pop into the wrong location without any animation. All of the other gallery styles have similar problems. The 3D gallery styles are particularly obviously wrong.
Attachments
Patch (2.34 KB, patch)
2011-03-14 13:22 PDT, Chris Marrin
aroben: review+
Adam Roben (:aroben)
Comment 1 2011-01-20 15:09:24 PST
I don't have any builds available between r75475 and r75503. Oddly, the only change in that range that seems remotely related is r75494, where I deleted WKCACFLayer.cpp/h. But those files weren't being used!
Adam Roben (:aroben)
Comment 2 2011-01-20 15:13:42 PST
Adam Roben (:aroben)
Comment 3 2011-01-21 05:18:11 PST
Oh, wait. Some of these builds are in the revision range where we changed the layout of the WebKitBuild directory, which means that the revision numbers aren't accurate (the bots were building into one directory and archiving build products from another). This means that my regression range is really larger than I thought.
Adam Roben (:aroben)
Comment 4 2011-01-21 05:25:29 PST
I'm highly suspicious of r75262.
Chris Marrin
Comment 5 2011-01-21 10:51:26 PST
(In reply to comment #4) > I'm highly suspicious of r75262. Yeah, this is a good bet. It is where we went from software to hardware animation for compositing layers.
Chris Marrin
Comment 6 2011-03-14 13:20:47 PDT
*** Bug 53495 has been marked as a duplicate of this bug. ***
Chris Marrin
Comment 7 2011-03-14 13:22:41 PDT
Adam Roben (:aroben)
Comment 8 2011-03-14 13:25:27 PDT
Comment on attachment 85709 [details] Patch Is there a way to make a regression test for this?
Chris Marrin
Comment 9 2011-03-14 13:54:29 PDT
Note You need to log in before you can comment on or make changes to this bug.