2011-03-14  Chris Marrin  <cmarrin@apple.com>

Reviewed by Adam Roben.

        REGRESSION (r75138-r75503): Animations on Apple HTML5 Gallery demo are wrong
        https://bugs.webkit.org/show_bug.cgi?id=52845

        The lastCommitTime() value in CACFLayerTreeHost was returning as the time
        the render previous to this one happened. That often made it seem like
        animations started more in the past than they did, breaking many animations.
        The startAnimations() call actually fires from a CACF callback after all the
        WebKit content has been rendered. So sending currentTime as the start time
        to the animations is close enough for proper synchronization.

        * platform/graphics/ca/win/CACFLayerTreeHost.cpp:
        (WebCore::CACFLayerTreeHost::notifyAnimationsStarted):


Canonical link: https://commits.webkit.org/70934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81054 268f45cc-cd09-0410-ab3c-d52691b4dbfc